--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
 						<p>Select</p>
 					</td>
 				</tr>
+                <tr>
+                    <td>
+                        <input onchange="toggle(); checkboxes()" id="checkbox6" type="checkbox">
+                    </td>
+                    <td>
+                        <p>All</p>
+                    </td>
+                </tr>
 			</table>
             <label for="form_name">Название</label>
             <input id="form_name" type="text" pattern=".{6,}" required>
